--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Klimakalkulator Pro</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="relative-humidity" href="icon.png">
 </head>
 
 <body>
@@ -68,4 +69,5 @@
 
   <script src="script.js"></script>
 </body>
+
 </html>
